Initial formatting changes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
-        <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
     </head>
     <body>
 
@@ -27,18 +22,14 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  David Lantos
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/sldblog</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/sldblog</a><br />
+                  David Lantos<br />
+                  <a href="http://github.com/sldblog/">github.com/sldblog</a><br />
+                  <a href="http://twitter.com/sldblog/">twitter.com/sldblog</a><br />
                 </p>
               </div>
             </div>
           </div>
-        </div> <!-- /container -->
+        </div>
 
     </body>
 </html>
