--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/css/syntax.css">
         <link rel="stylesheet" href="/css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
