--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/* Global Reset */
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +9,18 @@ body {
   text-align: center;
 }
 
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+p {
+  margin-top: 1em;
+}
+
+div.post {
+  margin-top: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Merriweather Sans', sans-serif;
+  margin: 1em 0 0.75em 0;
+}
 
 a         { color: #00a; }
 a:hover   { color: #000; }
