--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@ table {
 /*****************************************************************************/
 ul.posts {
   list-style-type: none;
-  margin-bottom: 2em;
 }
 
 ul.posts li {
@@ -57,8 +56,8 @@ ul.posts li {
 
 ul.posts span {
   color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+  font-family: Monaco, "Consolas", "Courier New", monospace;
+  font-size: 9pt;
 }
 
 /*****************************************************************************/
@@ -70,7 +69,7 @@ ul.posts span {
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  width: 980px;
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
@@ -140,24 +139,25 @@ ul.posts span {
 /*****************************************************************************/
 
 /* standard */
+.post pre, .post code {
+  font-family: Monaco, "Consolas", "Courier New", monospace;
+  font-size: 10pt;
+}
+
 .post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
+  margin: 0.5em 0;
+  border-left: 0.5em solid #c1e0ff;
+  padding: 0.25em 0 0.25em 0.5em;
+}
+
+.post p code {
+  border: 1px solid #9cf;
+  background-color: #d6eaff;
+  padding: 0.1em 0.2em;
 }
 
 .post ul, .post ol {
   margin-left: 1.35em;
-}
-
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
-
-.post pre code {
-  border: none;
 }
 
 /* terminal */
@@ -169,4 +169,15 @@ ul.posts span {
 
 .post pre.terminal code {
   background-color: #333;
+}
+
+table.categories {
+  width: 100%;
+  table-layout: fixed;
+}
+
+table.categories td {
+  vertical-align: top;
+  padding: 0.1em 1em;
+  border-left: 1em solid #eee;
 }
