Update style to yellowish-blue, bigger fonts.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,14 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  David Lantos<br />
-                  <a href="http://github.com/sldblog/">github.com/sldblog</a><br />
-                  <a href="http://twitter.com/sldblog/">twitter.com/sldblog</a><br />
+                  Content by David Lantos
+                  :: <a href="http://github.com/sldblog">@github</a>
+                  :: <a href="http://twitter.com/sldblog">@twitter</a>
+                </p>
+              </div>
+              <div class="contact">
+                <p>
+                  Content licensed via <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC BY 3.0</a>.
                 </p>
               </div>
             </div>
