--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  background-color: #fff;
-  font: 10pt Georgia, serif;
+  background-color: #f2efe4;
+  font: 11pt Georgia, serif;
   text-align: center;
 }
 
@@ -20,21 +20,11 @@ div.post {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather Sans', sans-serif;
   margin: 1em 0 0.75em 0;
+  color: #064066;
 }
 
-hr {
-  margin: 1em 0;
-  border: 2px solid #eee;
-}
-
-a { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-blockquote {
-  border-left: 0.5em solid #9cf;
-  padding: 0 1em;
-}
+a { color: #0b70b3; }
+a:hover   { color: #dfd0bb; }
 
 table {
   font-size: inherit;
@@ -57,7 +47,7 @@ ul.posts li {
 ul.posts span {
   color: #aaa;
   font-family: Monaco, "Consolas", "Courier New", monospace;
-  font-size: 9pt;
+  font-size: 70%;
 }
 
 /*****************************************************************************/
@@ -84,52 +74,12 @@ ul.posts span {
   margin-bottom: 2em;
 }
 
-.site .header h1.title a {
-  color: #a00;
-}
-
-.site .header h1.title a:hover {
-  color: #000;
-}
-
 .site .header a.extra {
-  color: #aaa;
   margin-left: 1em;
-}
-
-.site .header a.extra:hover {
-  color: #000;
 }
 
 .site .meta {
   color: #aaa;
-}
-
-.site .footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
-}
-
-.site .footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.site .footer .contact a {
-  color: #8085C1;
-}
-
-.site .footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.site .footer .rss img {
-  border: 0;
 }
 
 /*****************************************************************************/
@@ -141,35 +91,24 @@ ul.posts span {
 /* standard */
 .post pre, .post code {
   font-family: Monaco, "Consolas", "Courier New", monospace;
-  font-size: 10pt;
+  font-size: 90%;
 }
 
 .post pre {
   margin: 0.5em 0;
-  border-left: 0.5em solid #c1e0ff;
+  border-left: 0.5em solid #dfd0bb;
   padding: 0.25em 0 0.25em 0.5em;
 }
 
 .post p code {
-  border: 1px solid #9cf;
-  background-color: #d6eaff;
+  border: 1px solid #dfd0bb;
+  background-color: #efe7dd;
   padding: 0.1em 0.4em;
   border-radius: 999px;
 }
 
 .post ul, .post ol {
   margin-left: 1.35em;
-}
-
-/* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
-}
-
-.post pre.terminal code {
-  background-color: #333;
 }
 
 table.categories {
@@ -180,5 +119,32 @@ table.categories {
 table.categories td {
   vertical-align: top;
   padding: 0.1em 1em;
-  border-left: 1em solid #eee;
+  border-left: 1em solid #efe7dd;
+}
+
+hr {
+  margin: 1em 0;
+  border: 2px solid #dfd0bb;
+}
+
+blockquote {
+  border-left: 0.5em solid #dfd0bb;
+  padding: 0 1em;
+}
+
+.site .footer {
+  font-size: 80%;
+  color: #aaa;
+  border-top: 4px solid #dfd0bb;
+  margin-top: 2em;
+  padding-top: 1em;
+  overflow: hidden;
+}
+
+.site .footer .contact {
+  margin-right: 3em;
+}
+
+.site .footer .contact p {
+  margin: 0;
 }
