Adding page source link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,14 @@
               <div class="contact">
                 <p>
                   Content by David Lantos
-                  :: <a href="http://github.com/sldblog">@github</a>
-                  :: <a href="http://twitter.com/sldblog">@twitter</a>
+                  :: <a target="_blank" href="http://github.com/sldblog/sldblog.github.io">source</a>
+                  :: <a target="_blank" href="http://github.com/sldblog">@github</a>
+                  :: <a target="_blank" href="http://twitter.com/sldblog">@twitter</a>
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  Content licensed via <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC BY 3.0</a>.
+                  Content licensed via <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC BY 3.0</a>.
                 </p>
               </div>
             </div>
