--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<h2 class="maintitle">{{ page.title }}</h2>
+<div class="meta">{{ page.date | date_to_string }}</div>
+<hr class="metaline"/>
 
 <div class="post">
 {{ content }}
