--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/syntax.css">
         <link rel="stylesheet" href="/css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="shortcut icon" href="/images/favicon.png" />
     </head>
     <body>
 
