--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,7 @@ ul.posts span {
 table.categories {
   width: 100%;
   table-layout: fixed;
+  margin: 32px 32px 48px;
 }
 
 table.categories h2 {
