--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ div.post {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Merriweather Sans', serif;
   margin: 2em 0 1em 0;
   color: #064066;
 }
@@ -32,13 +32,14 @@ ul.posts {
 }
 
 .posts li {
-  line-height: 150%;
+  line-height: 100%;
+  margin-bottom: 8px;
 }
 
-.posts span {
+.posts .date {
   color: #aaa;
-  font-family: Monaco, "Consolas", "Courier New", monospace;
-  font-size: 9pt;
+  font-family: Helvetica, sans-serif;
+  font-size: 8pt;
 }
 
 /* Site */
@@ -122,6 +123,11 @@ ul.posts {
   font-size: 10pt;
 }
 
+.post img {
+  margin: 0 auto;
+  display: block;
+}
+
 .gist .gist-file .gist-meta {
   font-size: 9pt !important;
   line-height: 100%;
@@ -185,18 +191,17 @@ blockquote {
   margin: 0 0 24px;
 }
 
-@media screen and (max-width: 960px) and (orientation:portrait) {
-.site { width: 880px; }
+@media screen and (max-width: 960px) and (orientation:landscape) {
+.site { width: 1024px; }
 .site .category { width: 45%; min-width: 45%; }
 }
 
-@media screen and (max-width: 640px) {
-.site { width: 620px; }
-.site .category { width: 95%; min-width: 95%; }
+@media screen and (max-width: 960px) and (orientation:portrait) {
+.site { width: 760px; }
+.site .category { width: 45%; min-width: 45%; }
 }
 
 @media screen and (max-width: 480px) and (orientation:portrait) {
-.site { width: 460px; line-height: 1.25em; }
+.site { width: 460px; }
 .site .category { width: 95%; min-width: 95%; }
-.posts span { font-size: 7pt; }
 }
