Use full width headers and footers.
Includes colour changes and shadows under headings.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,11 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             </div>
+            <div class="content">
 
                 {{ content }}
 
+            </div>
             <div class="footer">
               <div class="contact">
                 <p>
