--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,13 +10,6 @@ layout: default
 </div>
 
 <div id="disqus_thread"></div>
-<script type="text/javascript">
-var disqus_shortname = 'sldblog';
-(function() {
- var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
- dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
- (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
- })();
-</script>
+<script type="text/javascript">(function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src="//sldblog.disqus.com/embed.js";(document.getElementsByTagName("head")[0]||document.getElementsByTagName("body")[0]).appendChild(e)})();</script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
