Update post stylesheets
- Remove text shadows, it's no longer the dark web. :wink:
- Remove custom title font.
- Use the same font/styling as Github itself.
- Use the same background colour for code snippets as code blocks.
- Increase spacing around code snippets and blocks.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 
 body {
   background-color: #f8f7f1;
-  font: 13pt "Georgia", serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 12pt;
   text-align: left;
 }
 
@@ -18,10 +19,9 @@ div.post {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Merriweather Sans', serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 2em 0 1em 0;
   color: #064066;
-  text-shadow: 1px 1px 0px #dfd0bb;
 }
 
 a { color: #0b70b3; }
@@ -54,7 +54,6 @@ ul.posts {
 
 .site .header a, .site .footer a {
   color: white;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
   font-weight: bold;
 }
 
@@ -143,15 +142,15 @@ ul.posts {
 }
 
 .post pre {
-  margin: 0.5em 0;
+  margin: 0.8em 0;
   border-left: 0.5em solid #dfd0bb;
-  padding: 0 0 0 0.5em;
+  padding: 0.3em 0.3em 0.3em 0.8em;
 }
 
 .post p code {
   border: 1px solid #dfd0bb;
-  background-color: #efe7dd;
-  padding: 0.1em 0.2em;
+  background-color: white;
+  padding: 0.2em 0.3em;
   border-radius: 6px;
   -webkit-border-radius: 6px;
 }
