--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ ul.posts {
   margin: 0.8em 0;
   border-left: 0.5em solid #dfd0bb;
   padding: 0.3em 0.3em 0.3em 0.8em;
+  overflow: scroll;
 }
 
 .post p code {
